# openDomainMcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.sh
.github/workflows/: deploy-aws.yml
.superpowers/sdd/: final-review-fixes.md
benchmarks/erpnext/: README.md  manifest.json  questions.jsonl  run_benchmark.py  setup_corpus.sh
docs/: ARCHITECTURE.md  DEVLOG.md  FEATURES.md  PRD.md  README.md  TASKS.md  architecture.html  build.py  devlog.html  features.html  guide.html  index.html  prd.html  reference.html  tasks.html
src/opendomainmcp/: cli.py  config.py  context.py  models.py  server.py
tests/: __init__.py  conftest.py  test_advisor.py  test_api.py  test_api_context_cache.py  test_auth.py  test_batch_extract.py  test_cli.py  test_collections.py  test_config.py  test_context.py  test_deps.py  test_deps_pipeline.py  test_extract.py  test_extract_graph_fields.py  test_graph_api.py  test_graph_builder.py  test_graph_collection_scope.py  test_graph_context.py  test_graph_mcp.py  test_graph_models.py  test_graph_store_fake.py  test_graph_store_mariadb.py  test_graphql.py  test_insight_api.py  test_integration_wiring.py  test_loader.py  test_mcp_endpoints.py  test_metrics.py  test_models.py  test_observability.py  test_openai_backend.py  test_openai_embedder.py  test_openapi.py  test_pipeline.py  test_pipeline_graph_sync.py  test_pipeline_security.py  test_pipeline_sync.py  test_publish_decisions.py  test_quality_evidence.py  (+26 more)
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/tests/: advisor.spec.ts  graph.spec.ts  (+7 more)
(+105 files in other folders)
