[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opendomainmcp"
version = "0.1.0"
description = "General-purpose domain knowledge workflow platform: ingest any document or code, extract domain knowledge, store in a vector DB, and query via CLI, MCP, or web UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic-settings>=2.0",
    "chromadb>=0.5",
    "fastembed>=0.3",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-bash>=0.23",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "rank-bm25>=0.2",
    "anthropic>=0.39",
    "mcp>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
opendomainmcp = "opendomainmcp.cli:main"
opendomainmcp-server = "opendomainmcp.server:main"
# Role-specific MCP view, e.g. `opendomainmcp-view --view product`.
opendomainmcp-view = "opendomainmcp.server:main"
opendomainmcp-web = "opendomainmcp.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opendomainmcp.api" = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
